0.10.8
    - better TLS logging
    - fall back to plaintext when optional STARTTLS failed
    - reworked inbound TLS, improved error handling
    - new RBL type: TRUST

0.10.7
    - QUEUE_POLICY instead of SHUFFLE_QUEUES
    - new R rule: ACCEPT
    - better TLS logging
    - ECDHE cipher suite support for inbound TLS
    - loopback connection bugfixes
    - more flexible TLS configuration

0.10.6
    - LDAP bind failure bugfix
    - better TLS logging
    - always make a delivery attempt before punting, even when
        QUEUE_INCOMING_SMTP_MAIL is set
    - RED rule parsing bugfixes
    - return SMTP 554 instead of 501 on SSL errors
    - option to limit the number of messages delivered on a connection
    - option to randomise message delivery order
    - min/max queue wait time bugfix
    - stop sending STARTTLS when it wasn't advertised
    - use non-blocking SSL calls, for working SSL timeouts

0.10.5
    - removed unused queue priority logic
    - red API cleaned up
    - DNS auto configure syntax changed, default is OFF, code cleaned up
    - secondary MX now a RED directive, better reception rules
    - RFC rules for outbound delivery quoted for accuracy
    - RED rules for TLS policy
    - TLS global and RED policy rules

0.10.1
    - E file format change for jail directive
    - additional logging for host deliver ordering
    - delivery activity logs in all cases
    - additional logging to help track down "no deliver" poison message
    - logging for SASL bug @ DEBUG_LOGGING level 1
    - (bugfix) accurately complain about simta_local_connections_max
    - (warnings fix) make sure oflags is initialized
    - Fix parallel build bug found by zeke
    - dnsr bug fix (ignore IPV6 AAAA records)
    - simrbl new feature: -t check_text
    - CVE-2011-0411: discard pending read data
    - config file bugfixes: RED rules, DEFAULT_LOCAL_MAILER
    - if group has mailforwardingaddress set,
	expand to that and ignore local members or moderation.